# Kedebao_ch

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Kedebao_ch.qmlproject  Kedebao_ch.qmlproject.qtds  Kedebao_ch.qmlproject.qtds.5f2273d  Kedebao_ch.qmlproject.qtds.f5bc912  Kedebao_ch.qrc  qds.cmake
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
Core/: CMakeLists.txt  DIOModule.cpp  DIOModule.h  KdbProxy.cpp  KdbProxy.h  LengthController.cpp  LengthController.h  MS300.cpp  MS300.h  ModbusManager.cpp  ModbusManager.h  ModbusWorker.cpp  ModbusWorker.h  Tension.cpp  Tension.h  bdaqctrl.h  core.cpp  core.h
Kedebao_ch/: CMakeLists.txt  Constants.qml  qmldir
Kedebao_ch/designer/: plugin.metainfo
Kedebao_chContent/: App.qml  AppState.qml  CMakeLists.txt  ErrorLog.qml  IndicatorUI.qml  ModeSwitch.qml  ModeSwitchUI.ui.qml  OperateInterface.qml  ParameterSetting.qml  ParameterSetting2.qml  ParameterSetting3.qml  ParameterSetting4.qml  ProjectMainScreen.qml  ProjectMainScreenUI.ui.qml  Screen01.ui.qml  qmldir
